force-app/main/default/objects/QuoteLineItem__c/QuoteLineItem__c.object-meta.xml
<CustomObject>
    <description>見積の明細行。見積(Quote__c)に主従関係で紐づく。</description>
    <label>見積明細</label>
    <nameField>
        <displayFormat>QL-{00000}</displayFormat>
        <label>明細番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>見積明細</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>