force-app/main/default/objects/QuoteLineItem__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>Quantity__c * UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>