force-app/main/default/objects/QuoteLineItem__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>摘要</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>