force-app/main/default/objects/QuoteLineItem__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <description>見積書に印字する際の並び順。</description>
    <label>行番号</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>