force-app/main/default/objects/QuoteLineItem__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>数量</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>