force-app/main/default/objects/QuoteLineItem__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>見積</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>見積明細</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>