force-app/main/default/objects/QuoteLineItem__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <description
  >表示・確認用。見積の合計計算には税率別に集計した TaxAmount10__c / TaxAmount8__c を使用する。</description>
    <formula
  >CASE(TEXT(TaxRate__c), "10%", FLOOR(Amount__c * 0.1), "8%", FLOOR(Amount__c * 0.08), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>消費税額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>