force-app/main/default/objects/QuoteLineItem__c/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <label>消費税率</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10%</fullName>
                <default>true</default>
                <label>10%</label>
            </value>
            <value>
                <fullName>8%</fullName>
            </value>
            <value>
                <fullName>非課税</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>