force-app/main/default/objects/QuoteLineItem__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>単位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>式</fullName>
            </value>
            <value>
                <fullName>個</fullName>
                <default>true</default>
                <label>個</label>
            </value>
            <value>
                <fullName>台</fullName>
            </value>
            <value>
                <fullName>本</fullName>
            </value>
            <value>
                <fullName>時間</fullName>
            </value>
            <value>
                <fullName>人月</fullName>
            </value>
            <value>
                <fullName>一式</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>