force-app/main/default/objects/QuoteLineItem__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>単価</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>